# owned_by_unique

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  gmock_macros_for_unique_ptr.hpp  main.cpp  owned_by_unique.hpp  owned_pointer.hpp  owned_pointer_ut.cpp  ptr_owned_by_unique.hpp  ptr_owned_by_unique_ut.cpp
example/: create_vector_of_unique_ptrs.cpp
inc/: gmock_macros_for_unique_ptr.hpp  owned_pointer.hpp
ut/: owned_pointer_ut.cpp
